tests/arch/riscv/error/compiler/test_riscv_error_compiler_001.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	A:		.word -1
   a:		.byte -1
	A:		.half 23